# secureai

./: .gitignore  Makefile  README.md  example.py  pyproject.toml
.github/workflows/: lint_test.yml  publish.yml
docs/: dstack-bootchain-verification.md  provenance-verification.md
src/secureai/: __init__.py  openai.py  ratls.py  ssl_context.py  utils.py
src/secureai/httpx/: async_client.py  sync_client.py
src/secureai/provenance/: __init__.py  slsa.py  verifier.py
src/secureai/verifiers/: base.py  collateral.json  tdx.py
tests/: conftest.py  test_client.py  test_dstack_tdx_verifier.py  test_module_init.py  test_provenance.py  test_provenance_errors.py  test_provenance_slsa.py  test_provenance_verifier.py  test_ratls.py  test_ssl_context.py
