[project]
name = "secureai"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dcap-qvl>=0.3.2",
    "dstack-sdk>=0.5.3",
    "httpx>=0.28.1",
    "openai>=2.7.2",
]

[dependency-groups]
dev = [
    "ruff",
]
test = [
    "pytest",
    "pytest-cov",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C4",  # flake8-comprehensions
    "ARG001", # unused arguments in functions
]

ignore = [
    "E501",  # line too long, handled by black
]

[build-system]
requires = ["uv_build>=0.8.20,<0.9.0"]
build-backend = "uv_build"
